test/soft-contract/ill-typed/mult_cps_e.caprice
(* TEST
  include refutable;
*)


let acc z m =
  fun r -> m (z + r)

let rec mult x y k =
  if x <= 0 || y <= 0
  then k 0
  else x + mult x (y - 1) (acc x k)

let check100 (w : int | 600 <= w) : int =
  w

let main (n : int) : int =
  mult 100 n check100 (* ERROR: 100 * n does not always exceed 600 *)
